@@ -15,7 +15,6 @@
                 <configuration>
                     <source>14</source>
                     <target>14</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -25,7 +24,12 @@
                 <configuration>
                     <source>14</source>
                     <target>14</target>
+                    <launcher>hellofx</launcher>
+                    <jlinkImageName>hello</jlinkImageName>
+                    <jlinkZipName>hellozip</jlinkZipName>
                     <mainClass>FillWordApp.View.View</mainClass>
+                    <jlinkExecutable>C:\Program Files\Java\jdk-14.0.1\bin\jlink</jlinkExecutable>
+                    <executable>C:\Program Files\Java\jdk-14.0.1\bin\java</executable>
                 </configuration>
             </plugin>
         </plugins>
@@ -55,19 +59,12 @@
             <version>14.0.1</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics </artifactId>
             <version>14.0.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx</artifactId>
-            <version>14.0.1</version>
-            <type>pom</type>
-        </dependency>
     </dependencies>
 
 
